Docker file updated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,8 @@ services:
         - booth-service
       environment:
         - CONTAINER_URL=${CONTAINER_NAME}
-        - API_URL=/api
+        - PUBLIC_URL=/api
+        - CITY=${CONTAINER_NAME}
 volumes:
   db_data:
 
