Docker file updated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
         - CONTAINER_URL=${CONTAINER_NAME}
         - PUBLIC_URL=/api
         - CITY=${CONTAINER_NAME}
+      restart: on-failure
 volumes:
   db_data:
 
