Docker file updated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
         - PUBLIC_URL=/api
         - CITY=${CONTAINER_NAME}
       restart: on-failure
+      networks:
+      - service-tier
 volumes:
   db_data:
 
