--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       depends_on:
         - mysql-container
       container_name: ${CONTAINER_NAME}
+      extra_hosts:
+        - "host.docker.internal:host-gateway"
 
     booth-frontend:
       image: booth-frontend
